--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -28,6 +28,9 @@
 
     {% render 'meta-tags' %}
 
+    <link rel="stylesheet" href="{{ 'all.min.css' | asset_url }}">
+    <script src="{{ 'all.min.js' | asset_url }}" defer="defer"></script>
+
     <script src="{{ 'constants.js' | asset_url }}" defer="defer"></script>
     <script src="{{ 'pubsub.js' | asset_url }}" defer="defer"></script>
     <script src="{{ 'global.js' | asset_url }}" defer="defer"></script>
