--- a/sections/footer-custom.liquid
+++ b/sections/footer-custom.liquid
@@ -48,7 +48,7 @@
   .footer-custom__col--logo {
     width: 100%;
     align-items: flex-start;
-    justify-content: flex-start;
+    justify-content: center;
     min-width: 15rem;
     margin-bottom: 1.5rem;
     display: flex;
