--- a/sections/faq.liquid
+++ b/sections/faq.liquid
@@ -15,6 +15,31 @@
     border-radius: 1rem;
   }
 
+  .collapsible-content details {
+    background-color: rgb(var(--color-foreground));
+    border: 1px solid rgb(var(--color-background));
+    color: black;
+    border-radius: 1rem;
+  }
+
+  .collapsible-content details[open] {
+    background-color: rgb(var(--color-background));
+    border: 1px solid rgb(var(--color-background));
+    color: rgba(var(--color-foreground), 0.75);
+  }
+
+  .collapsible-content details summary .accordion__title {
+    color: black;
+  }
+
+  .collapsible-content details[open] summary .accordion__title {
+    color: white;
+  }
+
+  .collapsible-content summary:hover .accordion__title {
+    text-decoration: none;
+  }
+
   @media screen and (min-width: 750px) {
     .section-{{ section.id }}-padding {
       padding-top: {{ section.settings.padding_top }}px;
